# pyrustplay

./: .gitignore  Cargo.toml  pyproject.toml  readme.md
.github/workflows/: pytest.yml
src/pyrustplay/: __init__.py  pyrustplay.py  pyrustplay_rs.pyi
src/rust/: lib.rs
tests/: test_runrust.py  test_xml2json.py
tests/testdata/: test1.json
