[package]
name = "pyrustplay_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyrustplay_rs"
path = "src/rust/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.18.3", features = ["extension-module", "abi3-py310", "generate-import-lib"] }
quick-xml = {version = "0.28.2", features = ["serialize"]}
serde = {version = "1.0.163", features = ["derive"]}
serde_json = "1.0.96"

[package.metadata.maturin]
name = "pyrustplay.pyrustplay_rs"
