[build-system]
requires = ["maturin>=1.1.0"]
build-backend = "maturin"

[project]
name = "pyrustplay"
version = "0.0.2"
description = "Basic setup to play with rust in python"
readme = "readme.md"
authors = [{ name = "Rolf Harkes", email = "r.harkes@nki.nl" }]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["rust", "python", "play"]
dependencies = [
    
]
requires-python = ">=3.10"

[tool.mypy]
python_version = '3.11'
mypy_path = "src"
packages = "pyrustplay"
strict = true

[tool.black]
line-length = 88
target-version = ['py310', 'py311']

[tool.pytest.ini_options]
pythonpath = [
  './src'
]

[tool.maturin]
python-source = "src"
module-name = "pyrustplay.pyrustplay_rs"